# Tabs

./: README.md  meson.build  org.zoey.Tabs.json  setup_win32.py
data/: meson.build  org.zoey.Tabs.desktop.in  org.zoey.Tabs.gschema.xml  org.zoey.Tabs.metainfo.xml.in  org.zoey.Tabs.service.in  style.css
data/icons/: meson.build
data/ui/: artist_sidebar.ui  tab_tile.ui  welcome.ui
po/: POTFILES.in
src/: main.py  meson.build  tabs.gresource.xml  tabs.in  welcome.py  window.py  window.ui
tabs/: create_tab_library.py  libraryui.py  main.py  meson.build  sidebar.py  tabs.gresource.xml  users_tabs.py  users_tabs_library.py  welcome.py
tabs/librarymanager/: artist_sidebar.py  artistsidebar.py  tab_tile.py  users_tabs_library.py
tabs/widgets/: artist_sidebar.py  tab_tile.py
